# stock-mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  __init__.py  docker-compose.yml  pyproject.toml  pytest.ini  run_financial_agent.py  start.md
.github/workflows/: docker-build.yml
data/: security_master.sqlite
financial_agent_system/: Dockerfile  __init__.py  deploy.sh  docker-compose.yml  main.py  requirements.txt
financial_agent_system/agents/: __init__.py  base_agent.py  financial_analyzer.py  investment_advisor.py  risk_manager.py
financial_agent_system/api/: routes.py  schemas.py
financial_agent_system/api/static/: index.html
financial_agent_system/config/: settings.py
financial_agent_system/core/: agent_manager.py  agent_registry.py  analysis_engine.py  harness.py  mcp_client.py  monitoring.py  sandbox_manager.py  security.py  skill_manager.py  visualization_engine.py
financial_agent_system/k8s/: deployment.yaml  service.yaml
financial_agent_system/skills/: investment_advice.md  market_analysis.md  risk_management.md
financial_agent_system/utils/: logger.py
src/: __init__.py
src/server/: __init__.py  app.py  auth_support.py
src/server/capabilities/: __init__.py  registry.py
src/server/capabilities/code_export/: __init__.py  http.py  mcp.py  plugin.py  schemas.py  service.py
src/server/capabilities/filings/: __init__.py  chunking.py  http.py  mcp.py  plugin.py  schemas.py  service.py
src/server/capabilities/fundamental/: __init__.py  http.py  mcp.py  plugin.py  schemas.py  service.py
src/server/capabilities/market/: __init__.py  http.py  mcp.py  plugin.py  schemas.py  service.py
src/server/capabilities/money_flow/: __init__.py  http.py  mcp.py  plugin.py  schemas.py  service.py
src/server/capabilities/news/: __init__.py  http.py  mcp.py  plugin.py  schemas.py  service.py
src/server/capabilities/technical/: __init__.py  http.py  mcp.py  plugin.py  schemas.py  service.py
src/server/config/: aliases_seed.json  routing_policy.json  settings.py
src/server/core/: dependencies.py
src/server/domain/: cninfo_helper.py  sec_filing_schema.py  sector_matching.py  types.py
src/server/domain/adapters/: akshare_adapter.py  alpha_vantage_adapter.py  baostock_adapter.py  base.py  ccxt_adapter.py  crypto_adapter.py  edgar_adapter.py  finnhub_adapter.py  fred_adapter.py  futures_adapter.py  tushare_adapter.py  twelve_data_adapter.py  yahoo_adapter.py
src/server/infrastructure/: __init__.py  minio_client.py
src/server/mcp/: envelope.py  server.py
src/server/providers/: __init__.py  contracts.py  registry.py
src/server/runtime/: __init__.py  auth.py  capability_registry.py  factory.py  health.py  lifecycle.py  models.py  provider_facade.py  provider_registry.py  provider_runtime.py  provider_selector.py  proxy_policy.py  settings.py
src/server/transports/: __init__.py
src/server/utils/: logger.py  mcp_logger.py  openapi_generator.py  proxy_utils.py  sec_utils.py
tests/: test_alpha_vantage_metals.py  test_architecture_cleanup.py  test_auth_support.py  test_capability_code_export_service.py  test_capability_filings_chunks.py  test_capability_news_service.py  test_domain_services_structure.py  test_domain_services_terminology.py  test_http_smoke_live.py  test_mcp_envelope_normalization.py  test_runtime_capability_registry.py  test_runtime_provider_registry.py  test_settings_contract.py  test_transport_entrypoints.py  test_yahoo_commodities.py
(+33 files in other folders)
