[project]
name = "stock-mcp"
version = "1.0.0"
description = "Financial data MCP and HTTP service for AI agents."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "aiocache==0.12.3",
  "aiodns==3.5.0",
  "aiohappyeyeballs==2.6.1",
  "aiohttp==3.13.2",
  "aiosignal==1.4.0",
  "akshare==1.17.87",
  "annotated-doc==0.0.4",
  "annotated-types==0.7.0",
  "asyncpg==0.30.0",
  "anyio==4.12.0",
  "argon2-cffi==25.1.0",
  "argon2-cffi-bindings==25.1.0",
  "async-timeout==5.0.1",
  "attrs==25.4.0",
  "Authlib==1.6.5",
  "backports.tarfile==1.2.0",
  "baostock==0.8.9",
  "beartype==0.22.8",
  "beautifulsoup4==4.14.2",
  "bs4==0.0.2",
  "cachetools==6.2.2",
  "ccxt==4.5.20",
  "certifi==2025.11.12",
  "cffi==2.0.0",
  "charset-normalizer==3.4.4",
  "click==8.3.1",
  "coincurve==21.0.0",
  "cryptography==46.0.3",
  "curl_cffi==0.13.0",
  "cyclopts==4.3.0",
  "decorator==5.2.1",
  "dependency-injector==4.48.2",
  "diskcache==5.6.3",
  "dnspython==2.8.0",
  "docstring_parser==0.17.0",
  "docutils==0.22.3",
  "edgartools==3.0.4",
  "email-validator==2.3.0",
  "et_xmlfile==2.0.0",
  "exceptiongroup==1.3.1",
  "fastapi==0.121.3",
  "fastcore==1.8.16",
  "fastmcp==2.13.1",
  "frozendict==2.4.7",
  "frozenlist==1.8.0",
  "h11==0.16.0",
  "html5lib==1.1",
  "httpcore==1.0.9",
  "httpx==0.28.1",
  "httpx-sse==0.4.3",
  "humanize==4.14.0",
  "idna==3.11",
  "importlib_metadata==8.7.0",
  "jaraco.classes==3.4.0",
  "jaraco.context==6.0.1",
  "jaraco.functools==4.3.0",
  "jsonschema==4.25.1",
  "jsonschema-path==0.3.4",
  "jsonschema-specifications==2025.9.1",
  "keyring==25.7.0",
  "lxml==6.0.2",
  "markdown-it-py==4.0.0",
  "markdownify==1.2.2",
  "mcp==1.23.1",
  "mdurl==0.1.2",
  "mini-racer==0.12.4",
  "minio==7.2.4",
  "more-itertools==10.8.0",
  "multidict==6.7.0",
  "multitasking==0.0.12",
  "nest-asyncio==1.6.0",
  "numpy==2.3.5",
  "openapi-pydantic==0.5.1",
  "openpyxl==3.1.5",
  "orjson==3.11.4",
  "packaging==25.0",
  "pandas==2.3.3",
  "pathable==0.4.4",
  "pathvalidate==3.3.1",
  "peewee==3.18.3",
  "platformdirs==4.5.0",
  "propcache==0.4.1",
  "protobuf==6.33.1",
  "py-key-value-aio==0.2.8",
  "py-key-value-shared==0.2.8",
  "pyarrow==22.0.0",
  "pycares==4.11.0",
  "pycparser==2.23",
  "pycryptodome==3.23.0",
  "pydantic==2.12.4",
  "pydantic-settings==2.12.0",
  "pydantic_core==2.41.5",
  "Pygments==2.19.2",
  "PyJWT==2.10.1",
  "pyperclip==1.11.0",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.2.1",
  "python-multipart==0.0.20",
  "pytz==2025.2",
  "PyYAML==6.0.3",
  "rank-bm25==0.2.2",
  "RapidFuzz==3.14.3",
  "redis==7.1.0",
  "referencing==0.36.2",
  "requests==2.32.5",
  "rich==14.2.0",
  "rich-rst==1.3.2",
  "rpds-py==0.30.0",
  "simplejson==3.20.2",
  "six==1.17.0",
  "soupsieve==2.8",
  "sse-starlette==3.0.3",
  "stamina==25.1.0",
  "starlette==0.50.0",
  "structlog==25.5.0",
  "tabulate==0.9.0",
  "tenacity==8.3.0",
  "textdistance==4.6.3",
  "tqdm==4.67.1",
  "tushare==1.4.24",
  "typing-inspection==0.4.2",
  "typing_extensions==4.15.0",
  "tzdata==2025.2",
  "Unidecode==1.4.0",
  "urllib3==2.5.0",
  "uvicorn==0.38.0",
  "webencodings==0.5.1",
  "websocket-client==1.9.0",
  "websockets==15.0.1",
  "xlrd==2.0.2",
  "yarl==1.22.0",
  "yfinance==1.0",
  "zipp==3.23.0",
  "docker>=7.1.0",
]

[dependency-groups]
dev = [
  "pytest==8.4.2",
]

[tool.uv]
package = false
